# francis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: hypothesis.rs  lib.rs  loki.rs  main.rs  observation.rs  runner.rs  theory.rs  validate.rs
theories/: theta_bistream_h3.json
