[package]
name = "francis"
version = "0.1.0"
edition = "2024"
description = "Log-based hypothesis verifier. Declares ordered predictions about log events and verifies them against Loki within timeout windows."
repository = "https://github.com/cwahn/francis"
license = "MIT"
keywords = ["loki", "observability", "testing", "log", "verification"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4", features = ["derive"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
